--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!doctype html>
-<html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Something Labs</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles/site.css">
-  </head>
-  <body>
-    <h1>{ Something } Labs</h1>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><title>{Something} Labs</title><meta content="width=device-width, initial-scale=1" name="viewport" /><link href="styles/site.css" rel="stylesheet" /></head><body><div class="content"><h1 class="site-title">{Something} Labs</h1><p class="site-summary">A place for my side projects.</p></div><section class="product"><div class="content"><h2 class="product-title">Drawstring</h2><p class="product-summary">Surrealist communal comic strips.</p><p class="product-description">Inspired by the 100 year old surrealist game, exquisite corpse,
+Drawstring lets you create comic strips with your friends. Each person
+draws one of the four panels, but can only see the panel that comes
+right before them. Nobody sees the full picture until it's done.</p></div></section><section class="product"><div class="content"><h2 class="product-title">Superscript</h2><p class="product-summary">Distraction-free comic script editor.</p><p class="product-description">Don't worry about numbering pages and panels. Forget about switching
+between headings, action, characters and dialog. Just write and let
+Superscript handle the rest.</p></div></section><section class="product"><div class="content"><h2 class="product-title">Summer</h2><p class="product-summary">Simple scorekeeper app.</p><p class="product-description">Forget pen and paper? Too drunk to add numbers? Open up Summer to
+keep score of your card and board games.</p></div></section><section class="product"><div class="content"><h2 class="product-title">Seconds</h2><p class="product-summary">Multiple cooking timers on your phone.</p><p class="product-description">Dinner on time. Easily create multiple timers to make every piece of your
+meal ready right on time.</p></div></section><section class="product"><div class="content"><h2 class="product-title">Genome</h2><p class="product-summary">Yet another node builder.</p><p class="product-description">Simple library for compiling your front-end files. No propriety
+syntax to learn. Just use plain Javascript.</p><p class="product-links"><a class="product-link" href="https://www.npmjs.com/package/genome"><img alt="View at npm" src="/images/npm.png" width="100" /></a><a class="product-link" href="https://github.com/jpsilva/genome"><img alt="Clone from GitHub" src="/images/github.png" width="100" /></a></p></div></section></body></html>
