Removed lodash requirement. Added webfonts to compilation.

--- a/webfonts/index.html
+++ b/webfonts/index.html
@@ -1,71 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Can I Font</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="webfonts.css">
-</head>
-<body>
-  <h1>Websafe font comparison</h1>
-
-  <div class="sources">
-    Sources:
-    <a href="https://en.wikipedia.org/wiki/List_of_typefaces_included_with_macOS">Wikipedia's list typefaces included with macOS</a>,
-    <a href="https://en.wikipedia.org/wiki/List_of_typefaces_included_with_Microsoft_Windows">Wikipedia's list typefaces included with Windows</a>,
-    <a href="http://iosfontlist.com/">iOS Font List</a>
-  </div>
-  <fieldset>
-    <legend>Platform support</legend>
-    <label><input class="platformCheckbox" name="mac" type="checkbox"> Mac</label>
-    <label><input class="platformCheckbox" name="win" type="checkbox"> Windows</label>
-    <label><input class="platformCheckbox" name="ios" type="checkbox"> iOS</label>
-  </fieldset>
-  <!-- <fieldset>
-    <legend>Font style</legend>
-    <label><input type="checkbox"> Serif</label>
-    <label><input type="checkbox"> Sans-serif</label>
-    <label><input type="checkbox"> Monospace</label>
-    <label><input type="checkbox"> Display</label>
-  </fieldset> -->
-
-  <p class="notes">
-    Platform version identifies the earliest version to include the font. Duplicate font family names are used to identify different font styles appearing in different platform versions.
-  </p>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Font family</th>
-        <th>Subtype</th>
-        <th>Styles</th>
-        <th>Notes</th>
-        <th>Mac version</th>
-        <th>Windows version</th>
-        <th>iOS version</th>
-      </tr>
-    </thead>
-    <tbody id="tableBody"></tbody>
-  </table>
-
-  <script type="text/x-template" id="tableData">
-    <% _.each(fonts, (font) => { %>
-      <tr>
-        <td><%- font.name %></td>
-        <td><%- font.subtype %></td>
-        <td><%- font.styles %></td>
-        <td><%- font.notes %></td>
-        <td><%- font.mac %></td>
-        <td><%- font.win %></td>
-        <td><%- font.ios %></td>
-      </tr>
-    <% }); %>
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
-  <script src="font-data.js"></script>
-  <script src="main.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><meta ,="" content="width=device-width, initial-scale=1.0" name="viewport" /><meta ,="" content="ie=edge" http-equiv="X-UA-Compatible" /><title>jpsilva's Websafe Font Comparison</title><link ,="" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet" /><link ,="" href="webfonts.css" rel="stylesheet" /></head><body><h1>Websafe font comparison</h1><div class="sources">Sources: <a href="https://en.wikipedia.org/wiki/List_of_typefaces_included_with_macOS">Wikipedia's list typefaces included with macOS</a>, <a href="https://en.wikipedia.org/wiki/List_of_typefaces_included_with_Microsoft_Windows">Wikipedia's list typefaces included with Windows</a>, <a href="http://iosfontlist.com/">iOS Font List</a></div><fieldset><legend>Platform support</legend><label><input ,="" class="platformCheckbox" name="mac" type="checkbox" />Mac</label><label><input ,="" class="platformCheckbox" name="win" type="checkbox" />Windows</label><label><input ,="" class="platformCheckbox" name="ios" type="checkbox" />iOS</label></fieldset><p class="notes">Platform version identifies the earliest version to include the font. Duplicate font family names are used to identify different font styles appearing in different platform versions.</p><table><thead><tr><th>Font family</th><th>Subtype</th><th>Styles</th><th>Notes</th><th>Mac version</th><th>Windows version</th><th>iOS version</th></tr></thead><tbody id="tableBody"></tbody></table><script src="font-data.js"></script><script src="main.js"></script></body></html>
