Added 'and windows' to Superscribe description and added FB pixel

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html><html><head><meta charset="utf-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><title>jpsilva : Apps : Web Development : Illustration</title><meta content="width=device-width, initial-scale=1" name="viewport" /><link href="favicon.ico" rel="shortcut icon" /><link href="favicon.ico" rel="icon" sizes="16x16 32x32" type="image/x-icon" /><link href="favicon-192.png" rel="icon" sizes="192x192" /><link href="favicon-180.png" rel="apple-touch-icon-precomposed" sizes="180x180" /><meta content="#FFFFFF" name="msapplication-TileColor" /><meta content="favicon-144.png" name="msapplication-TileImage" /><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet" /><link href="/styles/site.css" rel="stylesheet" /><script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!DOCTYPE html><html><head><meta charset="utf-8" /><meta content="ie=edge" http-equiv="x-ua-compatible" /><title>jpsilva : Apps : Web Development : Illustration</title><meta content="width=device-width, initial-scale=1" name="viewport" /><link href="favicon.ico" rel="shortcut icon" /><link href="favicon.ico" rel="icon" sizes="16x16 32x32" type="image/x-icon" /><link href="favicon-192.png" rel="icon" sizes="192x192" /><link href="favicon-180.png" rel="apple-touch-icon-precomposed" sizes="180x180" /><meta content="#FFFFFF" name="msapplication-TileColor" /><meta content="favicon-144.png" name="msapplication-TileImage" /><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet" /><link href="/styles/site.css" rel="stylesheet" /><script type="text/javascript">// Google Analytics
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 ga('create', 'UA-15048691-2', 'auto');
-ga('send', 'pageview');</script></head><body><header><div class="content"><h1 class="site-title">jpsilva</h1><p class="site-summary">Apps, tools, sites, illustration</p><nav class="main-nav"><a class="nav-link" href="#superscribe">Superscribe</a><a class="nav-link" href="#summer">Summer</a><a class="nav-link" href="#genome">Genome</a><a class="nav-link" href="#contact">Contact</a></nav></div></header><section class="product--superscribe" id="superscribe"><div class="content"><img alt="Superscribe icon" class="product-icon" src="/images/superscribe-icon.png" width="64" /><h2 class="product-title">Superscribe</h2><p class="product-summary">Distraction-free comic script editor for Mac.</p><p>Don't worry about numbering pages and panels. Forget about switching
-between headings, action, characters and dialog. Just write and let
-Superscribe handle the formatting.</p><p>The superscript syntax was inspired by markdown and fountain. One hashtag creates a page heading.
+ga('send', 'pageview');
+
+// Facebook pixel
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window,document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+ fbq('init', '1635531060089530');
+fbq('track', 'PageView');</script><noscript><img height="1" src="https://www.facebook.com/tr?id=1635531060089530&amp;ev=PageView&amp;noscript=1" width="1" /></noscript></head><body><header><div class="content"><h1 class="site-title">jpsilva</h1><p class="site-summary">Apps, tools, sites, illustration</p><nav class="main-nav"><a class="nav-link" href="#superscribe">Superscribe</a><a class="nav-link" href="#summer">Summer</a><a class="nav-link" href="#genome">Genome</a><a class="nav-link" href="#contact">Contact</a></nav></div></header><section class="product--superscribe" id="superscribe"><div class="content"><img alt="Superscribe icon" class="product-icon" src="/images/superscribe-icon.png" width="64" /><h2 class="product-title">Superscribe</h2><p class="product-summary">Distraction-free comic script editor for Mac and Windows.</p><p>Don't worry about numbering pages and panels. Forget about switching
+between headings, action, characters and dialog. Let
+Superscribe handle the formatting and page/panel numbering as you type.
+Fewer distractions means faster writing and easier editing.</p><p>The superscript syntax was inspired by markdown and fountain. One hashtag creates a page heading.
 Two hashtags create a panel heading. Superscribe inserts the page and
 panel numbers automatically, as you type.</p><p class="product-links"><a class="product-link" event-action="click" event-category="Superscribe" event-label="App Store" href="https://itunes.apple.com/us/app/superscribe/id1193005924?mt=12"><img alt="Download from the macOS App Store" height="50" src="/images/app-store-badge.svg" /></a><a class="product-link" event-action="click" event-category="Superscribe" event-label="Amazon" href="https://www.amazon.com/gp/product/B06WV8MFQZ"><img alt="Download from Amazon for Windows 7+" height="50" src="/images/amazon-badge.svg" /><small>for Windows 7+</small></a></p><img alt="Superscript screenshot" class="superscribe-screenshot" src="/images/superscribe-screenshot.jpg" /></div></section><section class="product--summer" id="summer"><div class="content"><img alt="Summer icon" class="product-icon" src="/images/summer-icon.png" width="64" /><h2 class="product-title">Summer</h2><p class="product-summary">Simple scorekeeper app for Android and iOS.</p><p>Starting a card game but you don't have pen and paper? Maybe you're too
 drunk to add numbers. Keep this on your phone just in case.</p><p class="product-links"><a class="product-link" event-action="click" event-category="Summer" event-label="App Store" href="https://itunes.apple.com/us/app/summer-scorekeeper/id1191619401?ls=1&amp;mt=8"><img alt="Download from the iOS App Store" height="50" src="/images/app-store-badge.svg" /></a><a class="product-link" event-action="click" event-category="Summer" event-label="Play Store" href="https://play.google.com/store/apps/details?id=com.jpsilva.summer"><img alt="Download from the Google Play Store" height="50" src="/images/google-play-badge.png" /></a></p><img alt="Summer screenshot" class="summer-screenshot" src="/images/summer-screenshot.jpg" /></div></section><section class="product--genome" id="genome"><div class="content"><img alt="Genome logo" class="product-icon" src="/images/genome-icon.png" width="64" /><h2 class="product-title">Genome</h2><p class="product-summary">Yet another node task runner.</p><p>Simple library for compiling your front-end files. There's no messy configuration
@@ -23,6 +37,7 @@ for (i = 0; i < eventElements.length; i++) {
     ga('send', 'event', this.getAttribute('event-category'), this.getAttribute('event-action'), this.getAttribute('event-label'), {
      'transport': 'beacon',
      'hitCallback': function(){ document.location = url; }
-   });
+    });
+    fbq('track', 'Lead');
   });
 }</script></body></html>
